Fixed the about me section overlapping on education

--- a/styles/Home/AboutMe.module.css
+++ b/styles/Home/AboutMe.module.css
@@ -24,7 +24,7 @@
 }
 
 .textContainer {
-    @apply flex flex-col justify-evenly;
+    @apply flex flex-col;
 }
 
 .myMissionDescription {
